test/Fail/Issue3420-Identity.err
Issue3420-Identity.agda:5.6-9: error: [NotLeqSort]
Set a is not less or equal than Set
when checking the definition of _≡_
